skan_tests/error/dne_binary.sk
int main(){
    int x=10;
    if (1 > x) x = 1;
    else x = 0;
    return 0;
}